--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,229 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.glitch {
+  position: relative;
+  color: white;
+  background-color: black;
+}
+
+.glitch::before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: 1px 0 blue;
+  top: 0;
+  color: white;
+  background-color: black;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: glitch-anim 2s infinite linear alternate-reverse;
+}
+
+.glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -1px 0 red;
+  top: 0;
+  color: white;
+  background-color: black;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: glitch-anim2 2s infinite linear alternate-reverse;
+}
+
+@keyframes glitch-anim {
+  0% {
+    clip: rect(42px, 9999px, 44px, 0);
+  }
+
+  5% {
+    clip: rect(44px, 9999px, 45px, 0);
+  }
+
+  10% {
+    clip: rect(33px, 9999px, 40px, 0);
+  }
+
+  15% {
+    clip: rect(75px, 9999px, 14px, 0);
+  }
+
+  20% {
+    clip: rect(12px, 9999px, 60px, 0);
+  }
+
+  25% {
+    clip: rect(12px, 9999px, 60px, 0);
+  }
+
+  30% {
+    clip: rect(72px, 9999px, 14px, 0);
+  }
+
+  35% {
+    clip: rect(51px, 9999px, 58px, 0);
+  }
+
+  40% {
+    clip: rect(34px, 9999px, 44px, 0);
+  }
+
+  45% {
+    clip: rect(30px, 9999px, 70px, 0);
+  }
+
+  50% {
+    clip: rect(12px, 9999px, 60px, 0);
+  }
+
+  55% {
+    clip: rect(14px, 9999px, 50px, 0);
+  }
+
+  60% {
+    clip: rect(34px, 9999px, 44px, 0);
+  }
+
+  65% {
+    clip: rect(30px, 9999px, 20px, 0);
+  }
+
+  70% {
+    clip: rect(12px, 9999px, 60px, 0);
+  }
+
+  75% {
+    clip: rect(14px, 9999px, 50px, 0);
+  }
+
+  80% {
+    clip: rect(34px, 9999px, 44px, 0);
+  }
+
+  85% {
+    clip: rect(30px, 9999px, 20px, 0);
+  }
+
+  90% {
+    clip: rect(12px, 9999px, 60px, 0);
+  }
+
+  95% {
+    clip: rect(14px, 9999px, 50px, 0);
+  }
+
+  100% {
+    clip: rect(34px, 9999px, 44px, 0);
+  }
+}
+
+@keyframes glitch-anim2 {
+  0% {
+    clip: rect(65px, 9999px, 63px, 0);
+  }
+
+  5% {
+    clip: rect(40px, 9999px, 44px, 0);
+  }
+
+  10% {
+    clip: rect(23px, 9999px, 60px, 0);
+  }
+
+  15% {
+    clip: rect(75px, 9999px, 14px, 0);
+  }
+
+  20% {
+    clip: rect(45px, 9999px, 35px, 0);
+  }
+
+  25% {
+    clip: rect(12px, 9999px, 60px, 0);
+  }
+
+  30% {
+    clip: rect(72px, 9999px, 14px, 0);
+  }
+
+  35% {
+    clip: rect(51px, 9999px, 58px, 0);
+  }
+
+  40% {
+    clip: rect(34px, 9999px, 44px, 0);
+  }
+
+  45% {
+    clip: rect(30px, 9999px, 70px, 0);
+  }
+
+  50% {
+    clip: rect(12px, 9999px, 60px, 0);
+  }
+
+  55% {
+    clip: rect(14px, 9999px, 50px, 0);
+  }
+
+  60% {
+    clip: rect(34px, 9999px, 44px, 0);
+  }
+
+  65% {
+    clip: rect(30px, 9999px, 20px, 0);
+  }
+
+  70% {
+    clip: rect(12px, 9999px, 60px, 0);
+  }
+
+  75% {
+    clip: rect(14px, 9999px, 50px, 0);
+  }
+
+  80% {
+    clip: rect(34px, 9999px, 44px, 0);
+  }
+
+  85% {
+    clip: rect(30px, 9999px, 20px, 0);
+  }
+
+  90% {
+    clip: rect(12px, 9999px, 60px, 0);
+  }
+
+  95% {
+    clip: rect(14px, 9999px, 50px, 0);
+  }
+
+  100% {
+    clip: rect(34px, 9999px, 44px, 0);
+  }
+}
+
+@keyframes rocket-movement {
+  0% {
+    transform: translateY(100vh);
+    /* Start below the screen */
+    opacity: 0;
+  }
+
+  10% {
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(-100vh);
+    /* End above the screen */
+    opacity: 0;
+  }
+}
